--- a/bigidiot/pom.xml
+++ b/bigidiot/pom.xml
@@ -11,20 +11,30 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven-compiler-plugin-version>3.3.9</maven-compiler-plugin-version>
   </properties>
   
    <build>  
         <plugins>  
             <plugin>  
                 <groupId>org.apache.maven.plugins</groupId>  
-                <artifactId>maven-compiler-plugin</artifactId>  
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
                 <configuration>  
                     <source>1.8</source>  
                     <target>1.8</target>  
                 </configuration>  
-            </plugin>  
+            </plugin>
+            
+            <plugin>  
+                <groupId>org.apache.maven.plugins</groupId>  
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version> 
+            </plugin>
+            
         </plugins>  
-    </build>  
+    </build>
+     
 
   <dependencies>
     <dependency>
